[FEAT] 스트림 종료 시 chatId 포함한 데이터 전송
- StreamEndData에 chatId 필드 추가
- StreamingSessionManager에서 botMessage 저장 후 chatId 반환
- WebSocket으로 클라이언트에 chatId 전송하여 ACK 처리 지원

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>